--- a/keynote.html
+++ b/keynote.html
@@ -1,10 +1,55 @@
 ---
 layout: default
-title: HTFF'16 - Keynote Speakers
+title: HTFF'17 - Keynote Speakers
+meta: The Keynote Speakers for HTFF
+keyword: heat transfer conference, cfd conference, fluid flow conference,  energy conference, combustion conference, heat pipe conference, renewable energy conference, rheology conference, turbulent flow conference, drying, feul cells, heat exchangers, nanofluids, multiphase flow, multiphase heat transfer, non-newtonian flow, porous media, thermodynamics, fluid mechanics, fluid dynamics, heat transfer, cfd, fluid flow, energy, combustion, heat pipe, renewable energy, rheology, turbulent flow, drying conference, feul cells conference, heat exchangers conference, nanofluids conference, multiphase flow conference, multiphase heat transfer conference, non-newtonian flow conference, porous media conference, thermodynamics conference, fluid mechanics conference, fluid dynamics conference
 ---
 
 <div class="unit unit-s-1 unit-m-1-4-1 unit-l-1-4-1">
   <div class="unit-spacer content">
-    <p class="body">The keynote information for the 3<sup>rd</sup> International Conference on Heat Transfer and Fluid Flow (HTFF'16) will be announced soon. We appreciate your patience!</p>
+    <p class="body">The keynote information for the 4<sup>th</sup> International Conference on Heat Transfer and Fluid Flow (HTFF'17) will be announced soon. We appreciate your patience!</p>
+
+    <!-- <div class="keynotes">
+      <div class="unit unit-s-1-1 unit-s-1-2 unit-m-1-2 unit-l-1-2">
+      <div class="unit-spacer">
+      <a href="#Dr. Gergely Kristof">Dr. Gergely Kristóf</a><br>
+           <p class="body">Budapest University of Technology and Economics, Hungary</p>
+      </div>
+    </div>
+
+    <div class="unit unit-s-1-1 unit-s-1-2 unit-m-1-2 unit-l-1-2">
+      <div class="unit-spacer">
+      <a href="#Dr. Subrata Roy">Dr. Subrata Roy</a><br>
+           <p class="body">University of Florida, USA</p>
+      </div>
+    </div>
+  </div> --> <!-- End Keynotes -->
+
+  <!-- <span class="anchor" id="Dr. Gergely Kristóf"></span>
+  <div class="keynote-info">
+  <p class="bold">Dr. Gergely Kristóf</p><img src="../img/Kristof.jpg" width="170" align="right" class="keynote-img">
+  <p class="body">Dr. Gergely Kristóf earned his MSc degree at the present Budapest University of Technology and Economics (BME). In his PhD thesis he developed a two-fluid model for the expansion of partially ionized pellet clouds in hot fusion plasmas. He is currently associate professor at the Department of Fluid Mechanics of BME. Dr. Kristóf has a 16 years practice in the industrial application of Computational Fluid Dynamics (CFD), participated in about 300 industrial consultancy projects in several application fields, such as atmospheric flows, porous media flows, heat exchanger modeling, building services engineering, water treatment, hydraulics and pipe transients. He also played a significant role in the introduction of CFD into the Hungarian higher education. He is member of ERCOFTAC and the Scientific Advisory Committee of Von Karman Institute.</p>
+
+  <p class="keynote-topic"><b>Topic of Keynote:</b> Investigation of Transfer Characteristics of Complex Surfaces by using Periodic Models</p>
+
+  <a href="../paper/Keynote - Dr. Kristof.pdf" class="pdf"><img src="../img/pdf_icon.gif">Keynote Abstract</a>
+
+  <div class="top"><a href="#top">top</a></div>
+  <div class="border"></div>
+  </div> --> <!-- End Keynote Info -->
+
+  <!-- <span class="anchor" id="Dr. Subrata Roy"></span>
+  <div class="keynote-info">
+  <p class="bold">Dr. Subrata Roy</p><img src="../img/Roy.jpg" width="170" align="right" class="keynote-img">
+  <p class="body">Dr. Subrata Roy earned his Bachelor of Mechanical Engineering from Jadavpur University, India.  He earned both his MS and PhD in Engineering Science from the University of Tennessee, USA. He is currently an associate professor of Mechanical and Aerospace Engineering Department and the founding Director of the Applied Physics Research Group of the University of Florida. Dr. Roy is a Distinguished Visiting Fellow of the Royal Academy of Engineering, a Fellow of the Royal Aeronautical Society, a fellow of the American Society for Mechanical Engineers, and an Associated Fellow of the American Institute of Aeronautics and Astronautics. He serves as a member of the Editorial Board of Nature Scientific Reports, an Academic Editor of PLoS-ONE. He has over 150 publications in peer-reviewed journals and bound volumes on plasma flow control research and has 30 issued and pending patents. He is also a nation appointed member to a NATO Science and Technology Organisation working group on plasma actuator technologies.</p>
+
+  <p class="keynote-topic"><b>Topic of Keynote:</b> Surface Cooling Enhancement Using Plasma Actuators</p>
+
+  <a href="../paper/Keynote - Dr. Roy.pdf" class="pdf"><img src="../img/pdf_icon.gif">Keynote Abstract</a>
+
+  <div class="top"><a href="#top">top</a></div>
+  <div class="border"></div>
+  </div> --> <!-- End Keynote Info -->
+
   </div>
   </div>
