--- a/payment_successful.html
+++ b/payment_successful.html
@@ -1,13 +1,15 @@
 ---
 layout: default
-title: HTFF'16 - PayPal Payment Successful
+title: HTFF'17 - PayPal Payment Successful
+meta: Payment Successful!
+keyword: heat transfer conference, cfd conference, fluid flow conference,  energy conference, combustion conference, heat pipe conference, renewable energy conference, rheology conference, turbulent flow conference, drying, feul cells, heat exchangers, nanofluids, multiphase flow, multiphase heat transfer, non-newtonian flow, porous media, thermodynamics, fluid mechanics, fluid dynamics, heat transfer, cfd, fluid flow, energy, combustion, heat pipe, renewable energy, rheology, turbulent flow, drying conference, feul cells conference, heat exchangers conference, nanofluids conference, multiphase flow conference, multiphase heat transfer conference, non-newtonian flow conference, porous media conference, thermodynamics conference, fluid mechanics conference, fluid dynamics conference
 ---
 
 <div class="unit unit-s-1 unit-m-1-4-1 unit-l-1-4-1">
   <div class="unit-spacer content">
     <p class="body">Your payment has been successful!</p>
 
-    <p align="body">We thank you very much for registering for HTFF'16. An email has been sent to you confirming your payment to HTFF'16. Please keep this email for your reference.</p>
+    <p align="body">We thank you very much for registering for HTFF'17. An email has been sent to you confirming your payment to HTFF'17. Please keep this email for your reference.</p>
 
     <p align="body">Please make sure you <strong>fill out and submit the registration form</strong>. Failing to fill out this form will result in the elimination of your registration.</p>
 
@@ -19,6 +21,6 @@ title: HTFF'16 - PayPal Payment Successful
 
     <center><a href="mailto:registration@htffconference.com" class="body-link">registration@htffconference.com</a></p>
 
-    <p class="body">We are looking forward to seeing you at HTFF'16!</p>
+    <p class="body">We are looking forward to seeing you at HTFF'17!</p>
   </div>
 </div>
