--- a/symposium.html
+++ b/symposium.html
@@ -1,11 +1,13 @@
 ---
 layout: default
-title: HTFF'16 - Symposium
+title: HTFF'17 - Symposium
+meta: Propose a symposium under the umbrella of the conference
+keyword: heat transfer conference, cfd conference, fluid flow conference,  energy conference, combustion conference, heat pipe conference, renewable energy conference, rheology conference, turbulent flow conference, drying, feul cells, heat exchangers, nanofluids, multiphase flow, multiphase heat transfer, non-newtonian flow, porous media, thermodynamics, fluid mechanics, fluid dynamics, heat transfer, cfd, fluid flow, energy, combustion, heat pipe, renewable energy, rheology, turbulent flow, drying conference, feul cells conference, heat exchangers conference, nanofluids conference, multiphase flow conference, multiphase heat transfer conference, non-newtonian flow conference, porous media conference, thermodynamics conference, fluid mechanics conference, fluid dynamics conference
 ---
 
 <div class="unit unit-s-1 unit-m-1-4-1 unit-l-1-4-1">
   <div class="unit-spacer content">
-   <p class="body">The 3<sup>rd</sup> International Conference on Heat Transfer and Fluid Flow (HTFF'16) invites you to propose a symposium.</p>
+   <p class="body">The 4<sup>th</sup> International Conference on Heat Transfer and Fluid Flow (HTFF'17) invites you to propose a symposium.</p>
 
    <p class="body">The proposed symposium, if accepted, will be co-located with and under the umbrella of the conference.</p>
 
