--- a/banktobank.html
+++ b/banktobank.html
@@ -1,6 +1,8 @@
 ---
 layout: default
-title: HTFF'16 - Bank to Bank Transfer
+title: HTFF'17 - Bank to Bank Transfer
+meta: Bank to bank information
+keyword: heat transfer conference, cfd conference, fluid flow conference,  energy conference, combustion conference, heat pipe conference, renewable energy conference, rheology conference, turbulent flow conference, drying, feul cells, heat exchangers, nanofluids, multiphase flow, multiphase heat transfer, non-newtonian flow, porous media, thermodynamics, fluid mechanics, fluid dynamics, heat transfer, cfd, fluid flow, energy, combustion, heat pipe, renewable energy, rheology, turbulent flow, drying conference, feul cells conference, heat exchangers conference, nanofluids conference, multiphase flow conference, multiphase heat transfer conference, non-newtonian flow conference, porous media conference, thermodynamics conference, fluid mechanics conference, fluid dynamics conference
 ---
 
 <div class="unit unit-s-1 unit-m-1-4-1 unit-l-1-4-1">
@@ -19,12 +21,14 @@ title: HTFF'16 - Bank to Bank Transfer
     K1H 7Y3<br>
     <b>Phone #:</b> +1-613-695-3040<br>
 <br>
-    <b>Account #:</b> 036001 3152773<br>
-    <b>Swift Code:</b> TDOMCATTTOR<br>
+    <b>Account #:</b> 23077000000726<br>
+    <b>Swift Code:</b> NOSCCATTFCA<br>
+    <b>Transit:</b> 23077<br>
     <b>Address:</b><br>
-    TD Canada Trust<br>
-    2470 Bank Street<br>
-    Ottawa, Ontario, Canada<br>
-    K1V 8S2</p>
+    Scotia Bank Canada<br>
+    20 Queen St. West, 4th floor<br>
+    Toronto, Ontario, Canada<br>
+    M5H 3R3<br>
+    <b>Phone #:</b> 888-855-1234</p>
   </div>
 </div>
