--- a/committee.html
+++ b/committee.html
@@ -1,13 +1,15 @@
 ---
 layout: default
-title: HTFF'16 - Scientific Committee
+title: HTFF'17 - Scientific Committee
+meta: The scientific committee members of HTFF
+keyword: heat transfer conference, cfd conference, fluid flow conference,  energy conference, combustion conference, heat pipe conference, renewable energy conference, rheology conference, turbulent flow conference, drying, feul cells, heat exchangers, nanofluids, multiphase flow, multiphase heat transfer, non-newtonian flow, porous media, thermodynamics, fluid mechanics, fluid dynamics, heat transfer, cfd, fluid flow, energy, combustion, heat pipe, renewable energy, rheology, turbulent flow, drying conference, feul cells conference, heat exchangers conference, nanofluids conference, multiphase flow conference, multiphase heat transfer conference, non-newtonian flow conference, porous media conference, thermodynamics conference, fluid mechanics conference, fluid dynamics conference
 ---
 
 <div class="unit unit-s-1 unit-m-1-4-1 unit-l-1-4-1">
   <div class="unit-spacer content">
     <p class="body">The Scientific Committee list is currently being updated. We appreciate your patience!</p>
 
-    <p class="bold">Scientific Committee Members:</p>
+    <!-- <p class="bold">Scientific Committee Members:</p>
 
     <p class="body"><b>Dr. Kenzu Abdella,</b> Trent University, Canada</p>
     <p class="body"><b>Dr. J. Azaiez,</b> The University of Calgary, Canada</p>
@@ -31,6 +33,6 @@ title: HTFF'16 - Scientific Committee
     <p class="body"><b>Dr. Khellil Sefiane,</b> The University of Edinburgh, United Kingdom</p>
     <p class="body"><b>Dr. Ahmet Selamet,</b> The Ohio State University, USA</p>
     <p class="body"><b>Dr. Wen-Quan Tao,</b> Xi'an Jiaotong University, China</p>
-    <p class="body"><b>Dr. Yuwen Zhang,</b> University of Missouri, USA</p>
+    <p class="body"><b>Dr. Yuwen Zhang,</b> University of Missouri, USA</p> -->
   </div>
   </div>
