--- a/committee.html
+++ b/committee.html
@@ -11,16 +11,21 @@ keyword: heat transfer conference, cfd conference, fluid flow conference,  energ
 
     <p class="bold">Scientific Committee Members:</p>
 
+    <p class="body"><b>Dr. Jalel Azaiez,</b> The University of Calgary, Canada</p>
     <p class="body"><b>Dr. Chang Kyoung Choi,</b> Michigan Technological University, USA</p>
+    <p class="body"><b>Dr. Louis Gosselin,</b> Université Laval, Canada</p>
     <p class="body"><b>Dr. Mohamed Hamed,</b> McMaster University, Canada</p>
     <p class="body"><b>Dr. Iqbal Husain,</b> Luther College-University of Regina, Canada</p>
+    <p class="body"><b>Dr. J. Kadambi,</b> Case Western Reserve University, USA</p>
     <p class="body"><b>Dr. Tassos G. Karayiannis,</b> Brunel University, United Kingdom</p>
     <p class="body"><b>Dr. Fotini Labropulu,</b> University of Regina, Canada</p>
     <p class="body"><b>Dr. Yang Liu,</b> The Hong Kong Polytechnic University, Hong Kong</p>
+    <p class="body"><b>Dr. Marco Marengo,</b> University of Brighton, UK</p>
     <p class="body"><b>Dr. Omar K. Matar,</b> Imperial College London, UK</p>
     <p class="body"><b>Dr. Martin Oberlack,</b> Technische Universität Darmstadt, Germany</p>
     <p class="body"><b>Dr. Yulia Plaksina,</b> Moscow State University, Russia</p>
     <p class="body"><b>Dr. Huihe Qiu,</b> The Hong Kong University of Science & Technology, Hong Kong</p>
+    <p class="body"><b>Dr. Subrata Roy,</b> University of Florida, USA</p>
     <p class="body"><b>Dr. Ziad Saghir,</b> Ryerson University, Canada</p>
     <p class="body"><b>Dr. Khellil Sefiane,</b> The University of Edinburgh, United Kingdom</p>
     <p class="body"><b>Dr. Ahmet Selamet,</b> The Ohio State University, USA</p>
