--- a/committee.html
+++ b/committee.html
@@ -13,13 +13,16 @@ keyword: heat transfer conference, cfd conference, fluid flow conference,  energ
 
     <p class="body"><b>Dr. Thomas Adams,</b> Rose-Hulman Institute of Technology, USA</p>
     <p class="body"><b>Dr. Jalel Azaiez,</b> The University of Calgary, Canada</p>
+    <p class="body"><b>Dr. Keumnam Cho,</b> Sungkyunkwan University, South Korea</p>
     <p class="body"><b>Dr. Chang Kyoung Choi,</b> Michigan Technological University, USA</p>
     <p class="body"><b>Dr. Louis Gosselin,</b> Université Laval, Canada</p>
     <p class="body"><b>Dr. Francesc Xavier Grau,</b> Universitat Rovira I Virgili, Spain</p>
     <p class="body"><b>Dr. Mohamed Hamed,</b> McMaster University, Canada</p>
     <p class="body"><b>Dr. Iqbal Husain,</b> Luther College-University of Regina, Canada</p>
+    <p class="body"><b>Dr. Tomáš Hyhlík,</b> Czech Technical University in Prague, Czech Republic</p>
     <p class="body"><b>Dr. J. Kadambi,</b> Case Western Reserve University, USA</p>
     <p class="body"><b>Dr. Tassos G. Karayiannis,</b> Brunel University, United Kingdom</p>
+    <p class="body"><b>Dr. Gergely Kristóf,</b> Budapest University of Technology and Economics, Hungary</p>
     <p class="body"><b>Dr. Fotini Labropulu,</b> University of Regina, Canada</p>
     <p class="body"><b>Dr. Yang Liu,</b> The Hong Kong Polytechnic University, Hong Kong</p>
     <p class="body"><b>Dr. Marco Marengo,</b> University of Brighton, UK</p>
@@ -27,6 +30,7 @@ keyword: heat transfer conference, cfd conference, fluid flow conference,  energ
     <p class="body"><b>Dr. Martin Oberlack,</b> Technische Universität Darmstadt, Germany</p>
     <p class="body"><b>Dr. Yulia Plaksina,</b> Moscow State University, Russia</p>
     <p class="body"><b>Dr. Huihe Qiu,</b> The Hong Kong University of Science & Technology, Hong Kong</p>
+    <p class="body"><b>Dr. Bhaskar Roy,</b> Indian Institute of Technology Bombay, India</p>
     <p class="body"><b>Dr. Subrata Roy,</b> University of Florida, USA</p>
     <p class="body"><b>Dr. Ziad Saghir,</b> Ryerson University, Canada</p>
     <p class="body"><b>Dr. Khellil Sefiane,</b> The University of Edinburgh, United Kingdom</p>
