--- a/committee.html
+++ b/committee.html
@@ -27,6 +27,7 @@ keyword: heat transfer conference, cfd conference, fluid flow conference,  energ
     <p class="body"><b>Dr. Yang Liu,</b> The Hong Kong Polytechnic University, Hong Kong</p>
     <p class="body"><b>Dr. Marco Marengo,</b> University of Brighton, UK</p>
     <p class="body"><b>Dr. Omar K. Matar,</b> Imperial College London, UK</p>
+    <p class="body"><b>Dr. Marc Miscevic,</b> Université Paul Sabatier, France</p>
     <p class="body"><b>Dr. Martin Oberlack,</b> Technische Universität Darmstadt, Germany</p>
     <p class="body"><b>Dr. Yulia Plaksina,</b> Moscow State University, Russia</p>
     <p class="body"><b>Dr. Huihe Qiu,</b> The Hong Kong University of Science & Technology, Hong Kong</p>
@@ -35,6 +36,7 @@ keyword: heat transfer conference, cfd conference, fluid flow conference,  energ
     <p class="body"><b>Dr. Ziad Saghir,</b> Ryerson University, Canada</p>
     <p class="body"><b>Dr. Khellil Sefiane,</b> The University of Edinburgh, United Kingdom</p>
     <p class="body"><b>Dr. Ahmet Selamet,</b> The Ohio State University, USA</p>
+    <p class="body"><b>Dr. Pavel Strizhak,</b> National Research Tomsk Polytechnic University, Russia</p>
     <p class="body"><b>Dr. Aldo Tamburrino,</b> University of Chile, Chile</p>
     <p class="body"><b>Dr. Wen-Quan Tao,</b> Xi'an Jiaotong University, China</p>
     <p class="body"><b>Dr. Liqiu Wang,</b> University of Hong Kong, Hong Kong</p>
