--- a/committee.html
+++ b/committee.html
@@ -39,6 +39,7 @@ keyword: heat transfer conference, cfd conference, fluid flow conference,  energ
     <p class="body"><b>Dr. Pavel Strizhak,</b> National Research Tomsk Polytechnic University, Russia</p>
     <p class="body"><b>Dr. Aldo Tamburrino,</b> University of Chile, Chile</p>
     <p class="body"><b>Dr. Wen-Quan Tao,</b> Xi'an Jiaotong University, China</p>
+    <p class="body"><b>Dr. Pavol Vitkovic,</b> Czech Technical University in Prague, Czech Republic</p>
     <p class="body"><b>Dr. Liqiu Wang,</b> University of Hong Kong, Hong Kong</p>
     <p class="body"><b>Dr. Yuwen Zhang,</b> University of Missouri, USA</p>
   </div>
