updated sc country

--- a/committee.html
+++ b/committee.html
@@ -21,7 +21,7 @@ keyword: heat transfer conference, cfd conference, fluid flow conference,  energ
     <p class="body"><b>Dr. Iqbal Husain,</b> Luther College-University of Regina, Canada</p>
     <p class="body"><b>Dr. Tomáš Hyhlík,</b> Czech Technical University in Prague, Czech Republic</p>
     <p class="body"><b>Dr. J. Kadambi,</b> Case Western Reserve University, USA</p>
-    <p class="body"><b>Dr. Tassos G. Karayiannis,</b> Brunel University, United Kingdom</p>
+    <p class="body"><b>Dr. Tassos G. Karayiannis,</b> Brunel University, UK</p>
     <p class="body"><b>Dr. Gergely Kristóf,</b> Budapest University of Technology and Economics, Hungary</p>
     <p class="body"><b>Dr. Fotini Labropulu,</b> University of Regina, Canada</p>
     <p class="body"><b>Dr. Yang Liu,</b> The Hong Kong Polytechnic University, Hong Kong</p>
@@ -34,7 +34,7 @@ keyword: heat transfer conference, cfd conference, fluid flow conference,  energ
     <p class="body"><b>Dr. Bhaskar Roy,</b> Indian Institute of Technology Bombay, India</p>
     <p class="body"><b>Dr. Subrata Roy,</b> University of Florida, USA</p>
     <p class="body"><b>Dr. Ziad Saghir,</b> Ryerson University, Canada</p>
-    <p class="body"><b>Dr. Khellil Sefiane,</b> The University of Edinburgh, United Kingdom</p>
+    <p class="body"><b>Dr. Khellil Sefiane,</b> The University of Edinburgh, UK</p>
     <p class="body"><b>Dr. Ahmet Selamet,</b> The Ohio State University, USA</p>
     <p class="body"><b>Dr. Pavel Strizhak,</b> National Research Tomsk Polytechnic University, Russia</p>
     <p class="body"><b>Dr. Aldo Tamburrino,</b> University of Chile, Chile</p>
