--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@ keyword: heat transfer conference, cfd conference, fluid flow conference,  energ
       <p class="body"><b>Dr. Yuwen Zhang,</b><br>University of Missouri, USA<br><a href="../keynote#Dr. Yuwen Zhang" class="body-link">Biography & Abstract</a></p>
     </div>
 
-    <!-- <div class="unit unit-s-1-2 unit-m-1-4 unit-l-1-2 keynoteIndex">
-      <img src="../img/Shahin.jpg" class="flex-img">
-      <p class="body"><b>Dr. Mohamed Shahin,</b><br>Curtin University, Australia<br><a href="../keynote#Dr. Mohamed Shahin" class="body-link">Biography & Abstract</a></p>
-    </div> --><br><br>
+    <div class="unit unit-s-1-2 unit-m-1-4 unit-l-1-2 keynoteIndex">
+      <img src="../img/Roy.jpg" class="flex-img">
+      <p class="body"><b>Dr. Subrata Roy,</b><br>University of Florida, USA<br><a href="../keynote#Dr. Subrata Roy" class="body-link">Biography & Abstract</a></p>
+    </div><br><br>
   </center>
 
 	<div class="sponsor">
