--- a/keynote.html
+++ b/keynote.html
@@ -19,12 +19,12 @@ keyword: heat transfer conference, cfd conference, fluid flow conference,  energ
       </div>
     </div>
 
-    <!-- <div class="unit unit-s-1-1 unit-s-1-2 unit-m-1-2 unit-l-1-2">
+    <div class="unit unit-s-1-1 unit-s-1-2 unit-m-1-2 unit-l-1-2">
       <div class="unit-spacer">
       <a href="#Dr. Subrata Roy">Dr. Subrata Roy</a><br>
            <p class="body">University of Florida, USA</p>
       </div>
-    </div> -->
+    </div>
   </div> <!-- End Keynotes -->
 
   <span class="anchor" id="Dr. Yuwen Zhang"></span>
@@ -40,18 +40,19 @@ keyword: heat transfer conference, cfd conference, fluid flow conference,  energ
   <div class="border"></div>
   </div> <!-- End Keynote Info -->
 
-  <!-- <span class="anchor" id="Dr. Subrata Roy"></span>
+  <span class="anchor" id="Dr. Subrata Roy"></span>
   <div class="keynote-info">
   <p class="bold">Dr. Subrata Roy</p><img src="../img/Roy.jpg" width="170" align="right" class="keynote-img">
-  <p class="body">Dr. Subrata Roy earned his Bachelor of Mechanical Engineering from Jadavpur University, India.  He earned both his MS and PhD in Engineering Science from the University of Tennessee, USA. He is currently an associate professor of Mechanical and Aerospace Engineering Department and the founding Director of the Applied Physics Research Group of the University of Florida. Dr. Roy is a Distinguished Visiting Fellow of the Royal Academy of Engineering, a Fellow of the Royal Aeronautical Society, a fellow of the American Society for Mechanical Engineers, and an Associated Fellow of the American Institute of Aeronautics and Astronautics. He serves as a member of the Editorial Board of Nature Scientific Reports, an Academic Editor of PLoS-ONE. He has over 150 publications in peer-reviewed journals and bound volumes on plasma flow control research and has 30 issued and pending patents. He is also a nation appointed member to a NATO Science and Technology Organisation working group on plasma actuator technologies.</p>
+  <p class="body">Dr. Subrata Roy earned his Bachelor of Mechanical Engineering from Jadavpur University, India. He earned both his MS and PhD in Engineering Science from the University of Tennessee, USA. He is currently a professor of Mechanical and Aerospace Engineering and the founding Director of the Applied Physics Research Group at the University of Florida. He is also the President of SurfPlasma, Inc. Dr. Roy is a Distinguished Visiting Fellow of the Royal Academy of Engineering, a Fellow of the Royal Aeronautical Society, a fellow of the American Society for Mechanical Engineers, and an Associated Fellow of the American Institute of Aeronautics and Astronautics. He serves as a member of the Editorial Board of Nature Scientific Reports, an Academic Editor of PLoS-ONE. He has over 160 publications in peer-reviewed journals and bound volumes, and has 30 issued and pending patents on plasma flow control and heat transfer related research. He is also a nation appointed chair member to a NATO Science and Technology Organisation working group on assessment of plasma actuator technologies for internal flows.</p>
 
-  <p class="keynote-topic"><b>Topic of Keynote:</b> Surface Cooling Enhancement Using Plasma Actuators</p>
+  <p class="keynote-topic"><b>Topic of Keynote:</b> Thermal Control Using
+Surface Plasma Actuation</p>
 
   <a href="../paper/Keynote - Dr. Roy.pdf" class="pdf"><img src="../img/pdf_icon.gif">Keynote Abstract</a>
 
   <div class="top"><a href="#top">top</a></div>
   <div class="border"></div>
-  </div> --> <!-- End Keynote Info -->
+  </div> <!-- End Keynote Info -->
 
   </div>
   </div>
