--- a/sponsor.html
+++ b/sponsor.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: HTFF'16 - Sponsors
+title: HTFF'17 - Sponsors
 ---
 
 <div class="unit unit-s-1 unit-m-1-4-1 unit-l-1-4-1">
@@ -14,7 +14,7 @@ title: HTFF'16 - Sponsors
 		<a href="http://avestia.com"><img src="../img/avestia.png" class="flex-sponsor"></a>
 	</div>
 
-	<p class="body">There are currently three types of sponsorships available for HTFF'16. The opportunities are as followed (prices are in Euros):</p>
+	<p class="body">There are currently three types of sponsorships available for HTFF'17. All sponsors will be provided an exhibition table at the conference. The opportunities are as followed (prices are in Euros):</p>
 
     <p class="body bold">Platinum Sponsorship, €3,500 (VAT included):</p>
     	<ul>
