--- a/committee.html
+++ b/committee.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: HTFF'17 - Scientific Committee
+title: HTFF'18 - Scientific Committee
 meta: The scientific committee members of HTFF
 keyword: heat transfer conference, cfd conference, fluid flow conference,  energy conference, combustion conference, heat pipe conference, renewable energy conference, rheology conference, turbulent flow conference, drying, feul cells, heat exchangers, nanofluids, multiphase flow, multiphase heat transfer, non-newtonian flow, porous media, thermodynamics, fluid mechanics, fluid dynamics, heat transfer, cfd, fluid flow, energy, combustion, heat pipe, renewable energy, rheology, turbulent flow, drying conference, feul cells conference, heat exchangers conference, nanofluids conference, multiphase flow conference, multiphase heat transfer conference, non-newtonian flow conference, porous media conference, thermodynamics conference, fluid mechanics conference, fluid dynamics conference
 ---
@@ -9,7 +9,7 @@ keyword: heat transfer conference, cfd conference, fluid flow conference,  energ
   <div class="unit-spacer content">
     <p class="body">The Scientific Committee list is currently being updated. We appreciate your patience!</p>
 
-    <p class="bold">Scientific Committee Members:</p><br>
+    <!-- <p class="bold">Scientific Committee Members:</p><br>
 
     <p class="body"><b>Dr. Thomas Adams,</b> Rose-Hulman Institute of Technology, USA</p>
     <p class="body"><b>Dr. Jalel Azaiez,</b> The University of Calgary, Canada</p>
@@ -41,6 +41,6 @@ keyword: heat transfer conference, cfd conference, fluid flow conference,  energ
     <p class="body"><b>Dr. Wen-Quan Tao,</b> Xi'an Jiaotong University, China</p>
     <p class="body"><b>Dr. Pavol Vitkovic,</b> Czech Technical University in Prague, Czech Republic</p>
     <p class="body"><b>Dr. Liqiu Wang,</b> University of Hong Kong, Hong Kong</p>
-    <p class="body"><b>Dr. Yuwen Zhang,</b> University of Missouri, USA</p>
+    <p class="body"><b>Dr. Yuwen Zhang,</b> University of Missouri, USA</p> -->
   </div>
   </div>
