--- a/keynote.html
+++ b/keynote.html
@@ -1,15 +1,15 @@
 ---
 layout: default
-title: HTFF'17 - Keynote Speakers
+title: HTFF'18 - Keynote Speakers
 meta: The Keynote Speakers for HTFF
 keyword: heat transfer conference, cfd conference, fluid flow conference,  energy conference, combustion conference, heat pipe conference, renewable energy conference, rheology conference, turbulent flow conference, drying, feul cells, heat exchangers, nanofluids, multiphase flow, multiphase heat transfer, non-newtonian flow, porous media, thermodynamics, fluid mechanics, fluid dynamics, heat transfer, cfd, fluid flow, energy, combustion, heat pipe, renewable energy, rheology, turbulent flow, drying conference, feul cells conference, heat exchangers conference, nanofluids conference, multiphase flow conference, multiphase heat transfer conference, non-newtonian flow conference, porous media conference, thermodynamics conference, fluid mechanics conference, fluid dynamics conference
 ---
 
 <div class="unit unit-s-1 unit-m-1-4-1 unit-l-1-4-1">
   <div class="unit-spacer content">
-    <!-- <p class="body">The keynote information for the 4<sup>th</sup> International Conference on Heat Transfer and Fluid Flow (HTFF'17) will be announced soon. We appreciate your patience!</p> -->
+    <p class="body">The keynote information for the 5<sup>th</sup> International Conference on Heat Transfer and Fluid Flow (HTFF'18) will be announced soon. We appreciate your patience!</p>
 
-    <p class="body">We are very happy to announce the following keynote speakers for the 4<sup>th</sup> International Conference on Heat Transfer and Fluid Flow (HTFF'17):</p>
+    <!-- <p class="body">We are very happy to announce the following keynote speakers for the 5<sup>th</sup> International Conference on Heat Transfer and Fluid Flow (HTFF'18):</p>
 
     <div class="keynotes">
       <div class="unit unit-s-1-1 unit-s-1-2 unit-m-1-2 unit-l-1-2">
@@ -18,16 +18,9 @@ keyword: heat transfer conference, cfd conference, fluid flow conference,  energ
            <p class="body">University of Missouri, USA</p>
       </div>
     </div>
+  </div>  --><!-- End Keynotes -->
 
-    <div class="unit unit-s-1-1 unit-s-1-2 unit-m-1-2 unit-l-1-2">
-      <div class="unit-spacer">
-      <a href="#Dr. Subrata Roy">Dr. Subrata Roy</a><br>
-           <p class="body">University of Florida, USA</p>
-      </div>
-    </div>
-  </div> <!-- End Keynotes -->
-
-  <span class="anchor" id="Dr. Yuwen Zhang"></span>
+  <!-- <span class="anchor" id="Dr. Yuwen Zhang"></span>
   <div class="keynote-info">
   <p class="bold">Dr. Yuwen Zhang</p><img src="../img/Zhang.jpg" width="170" align="right" class="keynote-img">
   <p class="body">Dr. Yuwen Zhang is a James C. Dowell Professor and Chairman of the Department of Mechanical and Aerospace Engineering at University of Missouri, USA. His research interests are in the areas of thermal-fluids science and engineering, including ultrafast and high-energy laser materials interaction, multiscale transport phenomena in multiphase systems, inverse problems and optimization under uncertainty, micro- and nanoscale heat transfer, and sustainable and renewable energy. He has published five books, over 260 journal articles, and more than 155 conference papers/presentations. He is recipients of the Young Investigator Award from the US Office of Naval Research, Senior Faculty Research Award from the College of Engineering in University of Missouri, as well as the Chancellor's Award for Outstanding Research and Creative Activity from the University of Missouri (2010). He is a fellow of the American Association for the Advancement of Science (AAAS), and a fellow of the American Society of Mechanical Engineers (ASME). He is the Co-Editor-in-Chief for two international journals, as well as editorial board members of other 10 international journals.</p>
@@ -38,21 +31,9 @@ keyword: heat transfer conference, cfd conference, fluid flow conference,  energ
 
   <div class="top"><a href="#top">top</a></div>
   <div class="border"></div>
-  </div> <!-- End Keynote Info -->
+  </div> --> <!-- End Keynote Info -->
 
-  <span class="anchor" id="Dr. Subrata Roy"></span>
-  <div class="keynote-info">
-  <p class="bold">Dr. Subrata Roy</p><img src="../img/Roy.jpg" width="170" align="right" class="keynote-img">
-  <p class="body">Dr. Subrata Roy earned his Bachelor of Mechanical Engineering from Jadavpur University, India. He earned both his MS and PhD in Engineering Science from the University of Tennessee, USA. He is currently a professor of Mechanical and Aerospace Engineering and the founding Director of the Applied Physics Research Group at the University of Florida. He is also the President of SurfPlasma, Inc. Dr. Roy is a Distinguished Visiting Fellow of the Royal Academy of Engineering, a Fellow of the Royal Aeronautical Society, a fellow of the American Society for Mechanical Engineers, and an Associated Fellow of the American Institute of Aeronautics and Astronautics. He serves as a member of the Editorial Board of Nature Scientific Reports, an Academic Editor of PLoS-ONE. He has over 160 publications in peer-reviewed journals and bound volumes, and has 30 issued and pending patents on plasma flow control and heat transfer related research. He is also a nation appointed chair member to a NATO Science and Technology Organisation working group on assessment of plasma actuator technologies for internal flows.</p>
-
-  <p class="keynote-topic"><b>Topic of Keynote:</b> Thermal Control Using
-Surface Plasma Actuation</p>
-
-  <a href="../paper/Keynote - Dr. Roy.pdf" class="pdf"><img src="../img/pdf_icon.gif">Keynote Abstract</a>
-
-  <div class="top"><a href="#top">top</a></div>
-  <div class="border"></div>
-  </div> <!-- End Keynote Info -->
+  
 
   </div>
   </div>
