--- a/venue.html
+++ b/venue.html
@@ -1,17 +1,17 @@
 ---
 layout: default
-title: HTFF'16 - Conference Venue
+title: HTFF'18 - Conference Venue
 meta: The conference venue of HTFF
 keyword: heat transfer conference, cfd conference, fluid flow conference,  energy conference, combustion conference, heat pipe conference, renewable energy conference, rheology conference, turbulent flow conference, drying, feul cells, heat exchangers, nanofluids, multiphase flow, multiphase heat transfer, non-newtonian flow, porous media, thermodynamics, fluid mechanics, fluid dynamics, heat transfer, cfd, fluid flow, energy, combustion, heat pipe, renewable energy, rheology, turbulent flow, drying conference, feul cells conference, heat exchangers conference, nanofluids conference, multiphase flow conference, multiphase heat transfer conference, non-newtonian flow conference, porous media conference, thermodynamics conference, fluid mechanics conference, fluid dynamics conference
 ---
 
 <div class="unit unit-s-1 unit-m-1-4-1 unit-l-1-4-1">
   <div class="unit-spacer content">
-  <!-- <p class="body">The venue of the conference will be announced shortly! Thank you for your patience.</p> -->
+  <p class="body">The venue of the conference will be announced shortly! Thank you for your patience.</p>
 
 
 
-<p class="body">We are pleased to announce that the 4<sup>th</sup> International Conference on Heat Transfer and Fluid Flow (HTFF'17) will be held in Italy, Rome on June 8 - 10, 2017 at the Barceló Aran Mantegna.</p>
+<!-- <p class="body">We are pleased to announce that the 5<sup>th</sup> International Conference on Heat Transfer and Fluid Flow (HTFF'18) will be held in Italy, Rome on August 16 - 18, 2018 at the Barceló Aran Mantegna.</p>
 
 <p class="body">The Barceló Aran Mantegna is located in EUR-Garbatella, Rome's business district, surrounded by green spaces and very close to the city's new exhibition centre, the Nuova Fiera di Roma. The hotel's location ensures that it is always peaceful, but it is also well-connected to the city centre and Fiumicino and Ciampino international airports. There is a bus stop nearby which links the hotel to the centre of Rome, as well as all kinds of shops, banks, restaurants, and cafés.</p>
 
@@ -23,7 +23,7 @@ keyword: heat transfer conference, cfd conference, fluid flow conference,  energ
 
 <p class="body">Rome can be reached very easily via its airports (Leonardo da Vinci and Ciampino), by rail (the two large stations, Termini and Tiburtina), and even by sea (the ports of Ostia, Fiumicino and Civitavecchia). </p>
 
-<p class="body">For more information on Rome, please visit <b><i><a href="http://www.turismoroma.it" target="_blank" class="body-link">Turismoroma</a></i></b>, the city’s tourist portal.</p>
+<p class="body">For more information on Rome, please visit <b><i><a href="http://www.turismoroma.it" target="_blank" class="body-link">Turismoroma</a></i></b>, the city’s tourist portal.</p> -->
 
 
   </div>
