--- a/events.html
+++ b/events.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: HTFF'17 - Events
+title: HTFF'18 - Events
 meta: Organize a symposium or workshop within the conference!
 keyword: heat transfer conference, cfd conference, fluid flow conference,  energy conference, combustion conference, heat pipe conference, renewable energy conference, rheology conference, turbulent flow conference, drying, feul cells, heat exchangers, nanofluids, multiphase flow, multiphase heat transfer, non-newtonian flow, porous media, thermodynamics, fluid mechanics, fluid dynamics, heat transfer, cfd, fluid flow, energy, combustion, heat pipe, renewable energy, rheology, turbulent flow, drying conference, feul cells conference, heat exchangers conference, nanofluids conference, multiphase flow conference, multiphase heat transfer conference, non-newtonian flow conference, porous media conference, thermodynamics conference, fluid mechanics conference, fluid dynamics conference
 ---
@@ -9,32 +9,24 @@ keyword: heat transfer conference, cfd conference, fluid flow conference,  energ
   <div class="unit-spacer content">
     <h3>Exhibits</h3>
     <p class="body">There are currently two types of opportunities for an exhibit at HTFF. They are as followed (prices are in Euros):</p>
-      <p class="body bold">Table exhibit, €1028.50 (VAT included):</p>
+      <p class="body bold">Table exhibit, €1500.00:</p>
         <ul>
             <li>A table setup for the entire duration of the conference</li>
             <li>1 free registration for the personnel from the institute</li>
-            <li>An additional €150.00 (VAT included) for each accompanying person</li>
+            <li>An additional €300.00 for each accompanying person</li>
         </ul>
 
-      <p class="body bold">Booth exhibit, €1028.50 (VAT included):</p>
+      <p class="body bold">Booth exhibit, €1500:</p>
         <ul>
             <li>A booth setup for 1 conference day</li>
             <li>1 free registration for the personnel from the institute</li>
-            <li>An additional €150.00 (VAT included) for each accompanying person</li>
-            <li><a href="../img/Exhibition.png" class="body-link">Booth Measurements</a></li>
+            <li>An additional €300.00 for each accompanying person</li>
         </ul>
 
       <p class="body">The exhibit provides a platform for companies and institutions to present their products and distribute brochures and business cards. The exhibit also provides a unique networking opportunity with many experts and researchers in the field of multimedia and human computer interaction.</p>
 
       <p class="body">If you are interested in an exhibit at HTFF, please do not hesitate to contact us at <a href="mailto:info@htffconference.com" class="body-link">info@htffconference.com</a>.</p>
 
-      <h3>Workshop</h3>
-      <p class="body">The 4<sup>th</sup> International Conference on Heat Transfer and Fluid Flow (htff'17) invites you to propose a workshop.</p>
-
-      <p class="body">The proposed workshop, if accepted, will be co-located with and under the umbrella of the conference.</p>
-
-      <p class="body">Proposals by prospective chairs should be submitted to <a href="mailto:info@htffconference.com" class="body-link">info@htffconference.com</a> and will be evaluated by the Organizing and Scientific Committees. Upon approval, the Organizing Committee will disseminate the news through the conference website and call for papers. To obtain a high attendance, we kindly ask that the prospective chairs also publicize the event and personally contact researchers who they think will be interested to contribute. The minimum number of registered presenters for the event to take place is 7. Should attendance reach this minimum requirement, registration fees for the Chair will be waived.</p>
-
-      <p class="body">If you have any questions, please do not hesitate to contact us at <a href="mailto:info@htffconference.com" class="body-link">info@htffconference.com</a>.</p>
+      
   </div>
   </div>
