--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 ---
 layout: default
-title: HTFF'17 - 4th International Conference on Heat Transfer and Fluid Flow
+title: HTFF'18 - 5th International Conference on Heat Transfer and Fluid Flow
 meta: A conference about heat transfer and fluid flow. Great opportunity to network and gain more knowledge!
 keyword: heat transfer conference, cfd conference, fluid flow conference,  energy conference, combustion conference, heat pipe conference, renewable energy conference, rheology conference, turbulent flow conference, drying, feul cells, heat exchangers, nanofluids, multiphase flow, multiphase heat transfer, non-newtonian flow, porous media, thermodynamics, fluid mechanics, fluid dynamics, heat transfer, cfd, fluid flow, energy, combustion, heat pipe, renewable energy, rheology, turbulent flow, drying conference, feul cells conference, heat exchangers conference, nanofluids conference, multiphase flow conference, multiphase heat transfer conference, non-newtonian flow conference, porous media conference, thermodynamics conference, fluid mechanics conference, fluid dynamics conference
 ---
 
 <div class="unit unit-s-1 unit-m-1-4-1 unit-l-1-4-1">
   <div class="unit-spacer content">
-    <p class="body">The 4<sup>th</sup> International Conference on Heat Transfer and Fluid Flow (HTFF'17) aims to become the leading annual conference in fields related to heat transfer and fluid flow. The goal of HTFF'17 is to gather scholars from all over the world to present advances in the relevant fields and to foster an environment conducive to exchanging ideas and information. This conference will also provide an ideal environment to develop new collaborations and meet experts on the fundamentals, applications, and products of the mentioned fields.</p>
+    <p class="body">The 5<sup>th</sup> International Conference on Heat Transfer and Fluid Flow (HTFF'18) aims to become the leading annual conference in fields related to heat transfer and fluid flow. The goal of HTFF'18 is to gather scholars from all over the world to present advances in the relevant fields and to foster an environment conducive to exchanging ideas and information. This conference will also provide an ideal environment to develop new collaborations and meet experts on the fundamentals, applications, and products of the mentioned fields.</p>
     
     <p class="body">All accepted and presented papers will be published in the conference proceedings, under an ISBN reference in a USB drive. The online version of the proceedings will also be published under an ISSN reference and each paper in the proceedings will be assigned unique DOIs by CrossRef. Furthermore, selected papers from the conference will be submitted for possible publication in the following journals from <a href="http://avestia.com/" class="body-link">Avestia Publishing</a> (publication fees may apply):</p>
 
@@ -15,9 +15,9 @@ keyword: heat transfer conference, cfd conference, fluid flow conference,  energ
 
 	<p class="body"><b>HTFF</b> is an acronym for <b>H</b>eat <b>T</b>ransfer and <b>F</b>luid <b>F</b>low.</p>
 
-	<p class="body">To view HTFF 2016 website, please visit <a href="http://2016.htffconference.com" class="body-link mob-link">www.2016.htffconference.com</a></p>
+	<p class="body">To view HTFF 2017 website, please visit <a href="http://2017.htffconference.com" class="body-link mob-link">www.2017.htffconference.com</a></p>
 
-	<h2>Keynote Speakers:</h2>
+	<!-- <h2>Keynote Speakers:</h2>
     <center>
     <div class="unit unit-s-1-1 unit-m-1-2 unit-l-1-2 keynoteIndex">
       <img src="../img/Zhang.jpg" class="flex-img">
@@ -29,7 +29,7 @@ keyword: heat transfer conference, cfd conference, fluid flow conference,  energ
       <img src="../img/Roy.jpg" class="flex-img">
       <p class="body"><b>Dr. Subrata Roy,</b><br>University of Florida, USA<br><a href="../keynote#Dr. Subrata Roy" class="body-link">Biography & Abstract</a></p>
     </div><br><br>
-  </center>
+  </center> -->
 
 	<div class="sponsor">
 	<a href="http://international-aset.com"><img src="../img/int-aset.svg" class="flex-sponsor1"></a><br>
