--- a/moneyorder.html
+++ b/moneyorder.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: HTFF'17 - Money Order
+title: HTFF'18 - Money Order
 meta: The Payment details for Money Order
 keyword: heat transfer conference, cfd conference, fluid flow conference,  energy conference, combustion conference, heat pipe conference, renewable energy conference, rheology conference, turbulent flow conference, drying, feul cells, heat exchangers, nanofluids, multiphase flow, multiphase heat transfer, non-newtonian flow, porous media, thermodynamics, fluid mechanics, fluid dynamics, heat transfer, cfd, fluid flow, energy, combustion, heat pipe, renewable energy, rheology, turbulent flow, drying conference, feul cells conference, heat exchangers conference, nanofluids conference, multiphase flow conference, multiphase heat transfer conference, non-newtonian flow conference, porous media conference, thermodynamics conference, fluid mechanics conference, fluid dynamics conference
 ---
@@ -11,8 +11,8 @@ keyword: heat transfer conference, cfd conference, fluid flow conference,  energ
 
     <p class="body">
     International ASET Inc.<br>
-    Unit No. 417, 1376 Bank St.<br>
-    Ottawa, Ontario, Canada<br>
-    K1H 7Y3</p>
+    Unit No. 104, 2442 St. Joseph Blvd.<br>
+    Orl&eacute;ans, Ontario, Canada<br>
+    Postal Code: K1C 1G1<br>
   </div>
 </div>
