--- a/paypal.html
+++ b/paypal.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: HTFF'17 - PayPal
+title: HTFF'18 - PayPal
 meta: PayPal Payment information for Registration
 keyword: heat transfer conference, cfd conference, fluid flow conference,  energy conference, combustion conference, heat pipe conference, renewable energy conference, rheology conference, turbulent flow conference, drying, feul cells, heat exchangers, nanofluids, multiphase flow, multiphase heat transfer, non-newtonian flow, porous media, thermodynamics, fluid mechanics, fluid dynamics, heat transfer, cfd, fluid flow, energy, combustion, heat pipe, renewable energy, rheology, turbulent flow, drying conference, feul cells conference, heat exchangers conference, nanofluids conference, multiphase flow conference, multiphase heat transfer conference, non-newtonian flow conference, porous media conference, thermodynamics conference, fluid mechanics conference, fluid dynamics conference
 ---
@@ -16,12 +16,11 @@ keyword: heat transfer conference, cfd conference, fluid flow conference,  energ
 	<input type="hidden" name="hosted_button_id" value="UZXN37ZKJPAZW">
 	<table>
 	<tr><td><input type="hidden" name="on0" value="~ Select Registration Type ~">Select Registration Type</td></tr><tr><td><select name="os0">
-	<option value="Full Registration">Full Registration €750.00 EUR</option>
-	<option value="Student Registration">Student Registration €600.00 EUR</option>
-	<option value="Additional Paper">Additional Paper €150.00 EUR</option>
-	<option value="Accompanying Person">Accompanying Person €150.00 EUR</option>
-	<option value="Closing Ceremony">Closing Ceremony €70.00 EUR</option>
-	<option value="MCM Workshop">MCM Workshop €122.00 EUR</option>
+	<option value="Full Registration">Early Bird Full Registration €650.00 EUR</option>
+ <option value="Student Registration">Early Bird Student Registration €450.00 EUR</option>
+ <option value="Additional Paper">Additional Paper €150.00 EUR</option>
+ <option value="Accompanying Person">Accompanying Person €150.00 EUR</option>
+ <option value="Closing Ceremony">Closing Ceremony €70.00 EUR</option>
 	</select> </td></tr>
 	</table>
 	<input type="hidden" name="currency_code" value="EUR">
