--- a/committee.html
+++ b/committee.html
@@ -14,7 +14,7 @@ keyword: heat transfer conference, cfd conference, fluid flow conference,  energ
     <p class="body"><b>Dr. Thomas Adams,</b> Rose-Hulman Institute of Technology, USA</p>
     <p class="body"><b>Dr. Zeyad Alwahabi,</b> University of Adelaide, Australia</p>
     <p class="body"><b>Dr. Jose Carlos Arcos Hernandez,</b> Instituto Politecnico Nacional, Mexico</p>
-    <p class="body"><b>Dr. Yapa Mudiyanselage Chamil Eranda Kumara Abeykoon,</b> The University of Manchester, UK</p>
+    <p class="body"><b>Dr. Chamil Abeykoon,</b> The University of Manchester, UK</p>
     <p class="body"><b>Dr. Jalel Azaiez,</b> The University of Calgary, Canada</p>
     <!-- <p class="body"><b>Dr. Keumnam Cho,</b> Sungkyunkwan University, South Korea</p> -->
     <p class="body"><b>Dr. Chang Kyoung Choi,</b> Michigan Technological University, USA</p>
@@ -40,14 +40,14 @@ keyword: heat transfer conference, cfd conference, fluid flow conference,  energ
     <p class="body"><b>Dr. Bhaskar Roy,</b> Indian Institute of Technology Bombay, India</p>
     <p class="body"><b>Dr. Subrata Roy,</b> University of Florida, USA</p>
     <p class="body"><b>Dr. Ziad Saghir,</b> Ryerson University, Canada</p>
-    <!-- <p class="body"><b>Dr. Khellil Sefiane,</b> The University of Edinburgh, UK</p> -->
+    <p class="body"><b>Dr. Khellil Sefiane,</b> The University of Edinburgh, UK</p>
     <p class="body"><b>Dr. Ahmet Selamet,</b> The Ohio State University, USA</p>
     <p class="body"><b>Dr. Pavel Strizhak,</b> National Research Tomsk Polytechnic University, Russia</p>
     <p class="body"><b>Dr. Aldo Tamburrino,</b> University of Chile, Chile</p>
     <p class="body"><b>Dr. Wen-Quan Tao,</b> Xi'an Jiaotong University, China</p>
     <p class="body"><b>Dr. Muris Torlak,</b> University of Sarajevo, Bosnia and Herzegovina</p>
     <!-- <p class="body"><b>Dr. Pavol Vitkovic,</b> Czech Technical University in Prague, Czech Republic</p> -->
-    <!-- <p class="body"><b>Dr. Liqiu Wang,</b> University of Hong Kong, Hong Kong</p> -->
+    <p class="body"><b>Dr. Liqiu Wang,</b> University of Hong Kong, Hong Kong</p>
     <p class="body"><b>Dr. Yuwen Zhang,</b> University of Missouri, USA</p>
   </div>
   </div>
