--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@ keyword: heat transfer conference, cfd conference, fluid flow conference,  energ
 
 	<p class="body">To view HTFF 2017 website, please visit <a href="http://2017.htffconference.com" class="body-link mob-link">www.2017.htffconference.com</a></p>
 
-	<!-- <h2>Keynote Speakers:</h2>
+	<h2>Keynote Speakers:</h2>
     <center>
     <div class="unit unit-s-1-1 unit-m-1-2 unit-l-1-2 keynoteIndex">
-      <img src="../img/Zhang.jpg" class="flex-img">
-      <p class="body"><b>Dr. Yuwen Zhang,</b><br>University of Missouri, USA<br><a href="../keynote#Dr. Yuwen Zhang" class="body-link">Biography & Abstract</a></p>
+      <img src="../img/Azaiez.jpg" class="flex-img">
+      <p class="body"><b>Dr. Jalel Azaiez,</b><br>The University of Calgary, Canada<br><a href="../keynote#Dr. Jalel Azaiez" class="body-link">Biography & Abstract</a></p>
     <br>
     </div>
 
-    <div class="unit unit-s-1-1 unit-m-1-4 unit-l-1-2 keynoteIndex">
+    <!-- <div class="unit unit-s-1-1 unit-m-1-4 unit-l-1-2 keynoteIndex">
       <img src="../img/Roy.jpg" class="flex-img">
       <p class="body"><b>Dr. Subrata Roy,</b><br>University of Florida, USA<br><a href="../keynote#Dr. Subrata Roy" class="body-link">Biography & Abstract</a></p>
-    </div><br><br>
-  </center> -->
+    </div><br><br> -->
+  </center>
 
 	<div class="sponsor">
 	<a href="http://international-aset.com"><img src="../img/int-aset.svg" class="flex-sponsor1"></a><br>
