--- a/registration.html
+++ b/registration.html
@@ -51,7 +51,7 @@ keyword: heat transfer conference, cfd conference, fluid flow conference,  energ
     <td class="date-title" rowspan="1">Workshop Registration***<br>TBA</td>
     </tr>
     <tr>
-    <td class="imp-date">TBA</td>
+    <td class="imp-date">€150</td>
     </tr>
 </tbody></table>
 </div>
@@ -89,7 +89,7 @@ keyword: heat transfer conference, cfd conference, fluid flow conference,  energ
 
     <tr>
     <th class="date-title" rowspan="1">Workshop Registration***<br>TBA</th>
-    <td class="imp-date">TBA</td>
+    <td class="imp-date">€150</td>
     </tr>
 </tbody>
 </table>
