--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: HTFF'18 - 5th International Conference on Heat Transfer and Fluid Flow
-meta: A conference about heat transfer and fluid flow. Great opportunity to network and gain more knowledge!
+meta: 5th International Conference on Heat Transfer and Fluid Flow (HTFF 2018). This conference covers different topics such as CFD, Heat Transfer Enhancement, Heat Transfer in Porous Media, Laminar and Turbulent Flow and Heat Transfer, Nanofluids, Non-Newtonian Fluids, Energies, Multiphase flow and heat transfer.
 keyword: heat transfer conference, cfd conference, fluid flow conference,  energy conference, combustion conference, heat pipe conference, renewable energy conference, rheology conference, turbulent flow conference, drying, feul cells, heat exchangers, nanofluids, multiphase flow, multiphase heat transfer, non-newtonian flow, porous media, thermodynamics, fluid mechanics, fluid dynamics, heat transfer, cfd, fluid flow, energy, combustion, heat pipe, renewable energy, rheology, turbulent flow, drying conference, feul cells conference, heat exchangers conference, nanofluids conference, multiphase flow conference, multiphase heat transfer conference, non-newtonian flow conference, porous media conference, thermodynamics conference, fluid mechanics conference, fluid dynamics conference
 ---
 
