--- a/index.html
+++ b/index.html
@@ -54,6 +54,12 @@ keyword: heat transfer conference, cfd conference, fluid flow conference,  energ
       <img src="../img/Abeykoon.jpg" class="flex-img" alt="Dr. Chamil Abeykoon">
       <p class="body"><b>Dr. Chamil Abeykoon,</b><br>The University of Manchester, UK<br><a href="../keynote#Dr. Chamil Abeykoon" class="body-link">Biography & Abstract</a></p>
     </div><br><br>
+
+    
+    <div class="unit unit-s-1-1 unit-m-1-4 unit-l-1-2 keynoteIndex">
+      <img src="../img/Hamed.jpg" class="flex-img" alt="Dr. Mohamed Hamed">
+      <p class="body"><b>Dr. Mohamed Hamed,</b><br>McMaster University, Canada<br><a href="../keynote#Dr. Mohamed Hamed" class="body-link">Biography & Abstract</a></p>
+    </div><br><br>
   </center>
 
 	<br>
